--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -29,13 +29,13 @@ padding-right = 1
 
 module-margin = 1
 
-separator = ~
+separator = |
 separator-foreground = ${colors.disabled}
 
 font-0 = Hack-Bold;2
 
-modules-left = xworkspaces
-modules-right = xkeyboard memory cpu battery date tray pulseaudio-control-output 
+modules-left = xworkspaces xkeyboard memory cpu battery
+modules-right = pulseaudio-control-output tray date
 
 cursor-click = pointer
 cursor-scroll = ns-resize
@@ -144,7 +144,7 @@ type = internal/cpu
 interval = 2
 format-prefix = "cpu "
 format-prefix-foreground = ${colors.primary}
-label = %percentage:2%%
+label = %percentage:3%%
 
 [network-base]
 type = internal/network
@@ -166,7 +166,7 @@ label-connected = %{F#F0C674}%ifname%%{F-} %local_ip%
 [module/date]
 type = internal/date
 interval = 1
-date = %H:%M:%S | %d-%m-%Y
+date = %H:%M:%S %d-%m-%Y
 label = %date%
 label-foreground = ${colors.primary}
 
