excluded some more stuff from transparency

--- a/picom/picom.conf
+++ b/picom/picom.conf
@@ -99,7 +99,11 @@ fade-out-step = 0.05;
 #################################
 #   Transparency / Opacity      #
 #################################
-opacity-rule = ["100:window_type = 'popup_menu'"]
+opacity-rule = [
+    "100:window_type = 'popup_menu'",
+    "100:window_type = 'dropdown_menu'",
+    "100:window_type = 'tooltip'"
+]
 
 
 # Opacity of inactive windows. (0.1 - 1.0, defaults to 1.0)
