--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -44,9 +44,9 @@ $menu = wofi --show drun
 # Autostart necessary processes (like notifications daemons, status bars, etc.)
 # Or execute your favorite apps at launch like this:
 
-# exec-once = $terminal
 exec-once = nm-applet &
 exec-once = waybar
+exec-once = hyprpaper
 
 
 #############################
