--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -243,6 +243,10 @@ bindel = ,XF86AudioMicMute, exec, wpctl set-mute @DEFAULT_AUDIO_SOURCE@ toggle
 bindel = ,XF86MonBrightnessUp, exec, brightnessctl s 10%+
 bindel = ,XF86MonBrightnessDown, exec, brightnessctl s 10%-
 
+# User bindings
+
+bind = , Print, exec, hyprshot -m region
+
 ##############################
 ### WINDOWS AND WORKSPACES ###
 ##############################
