home variable in hyprpaper

--- a/hypr/hyprpaper.conf
+++ b/hypr/hyprpaper.conf
@@ -1,2 +1,2 @@
-preload = /home/zer0/.config/hypr/wallpaper.jpg
-wallpaper = , /home/zer0/.config/hypr/wallpaper.jpg 
+preload = $HOME/.config/hypr/wallpaper.jpg
+wallpaper = , $HOME/.config/hypr/wallpaper.jpg
