--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -6,6 +6,12 @@ italic_font      auto
 bold_italic_font auto
 font_size 11.0
 
+
 # Background
 
 background_opacity 0.7
+
+
+# Misc
+
+confirm_os_window_close 0
