--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1,6 +1,6 @@
 # Fonts
 
-font_family      Hack
+font_family      HackNerdFont
 bold_font        auto
 italic_font      auto
 bold_italic_font auto
