--- a/i3status/config
+++ b/i3status/config
@@ -7,6 +7,7 @@ general {
 order += "cpu_usage"
 order += "memory"
 order += "disk /"
+order += "disk /home"
 order += "battery 0"
 order += "tztime local"
 
@@ -20,6 +21,10 @@ memory {
 
 disk / {
     format = "ROOT: %percentage_used"
+}
+
+disk /home {
+    format = "HOME: %percentage_used"
 }
 
 battery 0 {
