added volume and changed font

--- a/i3status/config
+++ b/i3status/config
@@ -9,6 +9,7 @@ order += "memory"
 order += "disk /"
 order += "disk /home"
 order += "battery 0"
+order += "volume master"
 order += "tztime local"
 
 cpu_usage {
@@ -29,6 +30,14 @@ disk /home {
 
 battery 0 {
     format = "%status %percentage"
+}
+
+volume master {
+        format = "♪: %volume"
+        format_muted = "♪: muted (%volume)"
+        device = "default"
+        mixer = "Master"
+        mixer_idx = 0
 }
 
 tztime local {
