--- a/i3status/config
+++ b/i3status/config
@@ -41,6 +41,6 @@ volume master {
 }
 
 tztime local {
-    format = "%Y-%m-%d %H:%M:%S"
+    format = "%d-%m-%Y %H:%M:%S"
     timezone = "Europe/Moscow"
 }
