--- a/i3status/config
+++ b/i3status/config
@@ -1,7 +1,7 @@
 general {
         output_format = "i3bar"
         colors = true
-        interval = 1
+        interval = 5
 }
 
 order += "cpu_usage"
@@ -41,6 +41,6 @@ volume master {
 }
 
 tztime local {
-    format = "%d-%m-%Y %H:%M:%S"
+    format = "%d-%m-%Y %H:%M"
     timezone = "Europe/Moscow"
 }
