--- a/alacritty/alacritty.toml
+++ b/alacritty/alacritty.toml
@@ -23,45 +23,26 @@ style = "Italic"
 [window]
 opacity = 1
 
-# TokyoNight Alacritty Colors
-# Default colors
 [colors.primary]
-background = '#24283b'
-foreground = '#c0caf5'
+background = "#181818"
+foreground = "#E4E4E4"
 
-#[colors.cursor]
-#cursor = '#c0caf5'
-#text = '#24283b'
-
-# Normal colors
 [colors.normal]
-black = '#1d202f'
-red = '#f7768e'
-green = '#9ece6a'
-yellow = '#e0af68'
-blue = '#7aa2f7'
-magenta = '#bb9af7'
-cyan = '#7dcfff'
-white = '#a9b1d6'
+black   = "#181818"
+red     = "#F43841"
+green   = "#73D936"
+yellow  = "#FFDD33"
+blue    = "#96A6C8"
+magenta = "#9E95C7"
+cyan    = "#95A99F"
+white   = "#E4E4E4"
 
-# Bright colors
 [colors.bright]
-black = '#414868'
-red = '#f7768e'
-green = '#9ece6a'
-yellow = '#e0af68'
-blue = '#7aa2f7'
-magenta = '#bb9af7'
-cyan = '#7dcfff'
-white = '#c0caf5'
-
-# Indexed Colors
-[[colors.indexed_colors]]
-index = 16
-color = '#ff9e64'
-
-[[colors.indexed_colors]]
-index = 17
-color = '#db4b4b'
-
-[terminal]
+black   = "#52494E"
+red     = "#FF4F58"
+green   = "#73D936"
+yellow  = "#FFDD33"
+blue    = "#96A6C8"
+magenta = "#AFAFD7"
+cyan    = "#95A99F"
+white   = "#F5F5F5"
