--- a/alacritty/alacritty.toml
+++ b/alacritty/alacritty.toml
@@ -1,48 +1,6 @@
-[terminal.shell]
-program = "/usr/bin/fish"
-
 [font]
 size = 15.0
 
 [font.normal]
-family = "HackNerdFont"
+family = "DejaVu Sans Mono"
 style = "Regular"
-
-[font.bold]
-family = "HackNerdFont"
-style = "Bold"
-
-[font.bold_italic]
-family = "HackNerdFont"
-style = "Bold Italic"
-
-[font.italic]
-family = "HackNerdFont"
-style = "Italic"
-
-[window]
-opacity = 1
-
-[colors.primary]
-background = "#181818"
-foreground = "#E4E4E4"
-
-[colors.normal]
-black   = "#181818"
-red     = "#F43841"
-green   = "#73D936"
-yellow  = "#FFDD33"
-blue    = "#96A6C8"
-magenta = "#9E95C7"
-cyan    = "#95A99F"
-white   = "#E4E4E4"
-
-[colors.bright]
-black   = "#52494E"
-red     = "#FF4F58"
-green   = "#73D936"
-yellow  = "#FFDD33"
-blue    = "#96A6C8"
-magenta = "#AFAFD7"
-cyan    = "#95A99F"
-white   = "#F5F5F5"
