--- a/gf2_config.ini
+++ b/gf2_config.ini
@@ -1,3 +1,3 @@
 [ui]
-font_path=/usr/share/fonts/TTF/Hack-Regular.ttf
+font_path=/home/zer0/.local/share/fonts/Hack/Hack-Regular.ttf
 font_size_interface=18
